Updated index and favicon

--- a/index.html
+++ b/index.html
@@ -3,17 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>FreshersPro – AI Resume Builder & ATS Score Checker</title>
+
     <meta name="description" content="Build a professional resume in 60 seconds. AI-powered Resume Builder & ATS Score Checker for Indian students and freshers." />
     <meta name="author" content="FreshersPro" />
+
+    <!-- FAVICONS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" href="/favicon.ico">
+
+    <!-- Open Graph (for WhatsApp / LinkedIn preview) -->
     <meta property="og:title" content="FreshersPro – AI Resume Builder" />
     <meta property="og:description" content="Build a professional resume in 60 seconds. AI-powered ATS Score Checker for students." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/apple-touch-icon.png" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="FreshersPro – AI Resume Builder" />
+    <meta name="twitter:description" content="AI-powered Resume Builder & ATS Score Checker for freshers." />
+    <meta name="twitter:image" content="/apple-touch-icon.png" />
+
   </head>
 
   <body>
