--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="author" content="FreshersPro" />
 
     <!-- FAVICONS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico?v=2">
 
     <!-- Open Graph (for WhatsApp / LinkedIn preview) -->
     <meta property="og:title" content="FreshersPro – AI Resume Builder" />
