Removed all Lovable branding and fixed OG tags

--- a/index.html
+++ b/index.html
@@ -1,37 +1,29 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>FreshersPro – AI Resume Builder & ATS Score Checker</title>
+  <title>FreshersPro – AI Resume Builder & ATS Score Checker</title>
 
-    <meta name="description" content="Build a professional resume in 60 seconds. AI-powered Resume Builder & ATS Score Checker for Indian students and freshers." />
-    <meta name="author" content="FreshersPro" />
+  <meta name="description" content="Build a professional resume in 60 seconds. AI-powered Resume Builder & ATS Score Checker for Indian students and freshers." />
+  <meta name="author" content="FreshersPro" />
 
-    <!-- FAVICONS -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="icon" href="/favicon.ico?v=2">
+  <!-- FAVICONS (Cache Bust Version) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
+  <link rel="manifest" href="/site.webmanifest?v=2">
+  <link rel="icon" href="/favicon.ico?v=2">
 
-    <!-- Open Graph (for WhatsApp / LinkedIn preview) -->
-    <meta property="og:title" content="FreshersPro – AI Resume Builder" />
-    <meta property="og:description" content="Build a professional resume in 60 seconds. AI-powered ATS Score Checker for students." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/apple-touch-icon.png" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="FreshersPro – AI Resume Builder" />
+  <meta property="og:description" content="Build a professional resume in 60 seconds. AI-powered ATS Score Checker for students." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://fresherspro.vercel.app" />
+  <meta property="og:image" content="https://fresherspro.vercel.app/apple-touch-icon.png" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="FreshersPro – AI Resume Builder" />
-    <meta name="twitter:description" content="AI-powered Resume Builder & ATS Score Checker for freshers." />
-    <meta name="twitter:image" content="/apple-touch-icon.png" />
-
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="FreshersPro – AI Resume Builder" />
+  <meta name="twitter:description" content="AI-powered Resume Builder & ATS Score Checker for freshers." />
+  <meta name="twitter:image" content="https://fresherspro.vercel.app/apple-touch-icon.png" />
+</head>
