Updated favicon and manifest

--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>FreshersPro – AI Resume Builder & ATS Score Checker</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Build a professional resume in 60 seconds. AI-powered Resume Builder & ATS Score Checker for Indian students and freshers." />
-    <meta name="author" content="FreshersPro" />
+  <title>FreshersPro – AI Resume Builder & ATS Score Checker</title>
 
-    <!-- FAVICONS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="icon" href="/favicon.ico">
+  <meta name="description"
+    content="Build a professional resume in 60 seconds. AI-powered Resume Builder & ATS Score Checker for Indian students and freshers." />
+  <meta name="author" content="FreshersPro" />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="FreshersPro – AI Resume Builder" />
-    <meta property="og:description" content="Build a professional resume in 60 seconds. AI-powered ATS Score Checker for students." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://fresherspro.vercel.app" />
-    <meta property="og:image" content="https://fresherspro.vercel.app/apple-touch-icon.png" />
+  <!-- FAVICONS -->
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="FreshersPro – AI Resume Builder" />
-    <meta name="twitter:description" content="AI-powered Resume Builder & ATS Score Checker for freshers." />
-    <meta name="twitter:image" content="https://fresherspro.vercel.app/apple-touch-icon.png" />
-  </head>
+  <!-- Open Graph -->
+  <meta property="og:title" content="FreshersPro – AI Resume Builder" />
+  <meta property="og:description"
+    content="Build a professional resume in 60 seconds. AI-powered ATS Score Checker for students." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://fresherspro.vercel.app" />
+  <meta property="og:image" content="https://fresherspro.vercel.app/apple-touch-icon.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="FreshersPro – AI Resume Builder" />
+  <meta name="twitter:description" content="AI-powered Resume Builder & ATS Score Checker for freshers." />
+  <meta name="twitter:image" content="https://fresherspro.vercel.app/apple-touch-icon.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
